2012-03-30  Andreas Kupries  <andreask@activestate.com>

	* ncgi.tcl: [Bug 3513149]: Removed superfluous closing
	* pkgIndex.tcl: bracket. Bumped version to 1.3.3.
	* ncgi.man:

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-04-23  Andreas Kupries  <andreask@activestate.com>

	* ncgi.tcl (::ncgi::exists): Fixed documentation in code
	* ncgi.man: and outside, the result was specified wrongly.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-22  Andreas Kupries  <andreask@activestate.com>

	* ncgi.man: Tweaked the formatting of the newly committed example
	  a bit.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: Rewritten to use new features for handling the
	  environment.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: Fixed ncgi dependencies in the scripts executed by
	  sub-shells.
