@@ -1,2 +1,2 @@
-if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded ncgi 1.3.3 [list source [file join $dir ncgi.tcl]]
+if {![package vsatisfies [package provide Tcl] 8.4]} {return}
+package ifneeded ncgi 1.4 [list source [file join $dir ncgi.tcl]]
